NewArchive/542342d1f2a3d60871c2ba684044f597-93e6c6235a92d0c233f44beab03470ad/output
main.cpp:79:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout << "next parse should fail:\n";
    ^~~~
    std::cout
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
1 error generated.
